# prg20

./: CMakeLists.txt  tarefa 2.c
Arvore/: Árvore_de_busca_binária.c
Verifica login e senha utilizando lista/: CMakeLists.txt  projeto_login.c
Verifica login e senha utilizando lista/libprg/: listaencadeada.c
Verifica login e senha utilizando tabela hash/: CMakeLists.txt  login_hash.c
Verifica login e senha utilizando tabela hash/libprg2/: Pilha.c  listaencadeada.c  main.c  tabelahash.c
aula 27-10/libprg2/: fila.c  ista_encadeada.c  libprg2.h  lista_encadeada.c  lista_linear.C  main.c
aula19-09/: Pilha.c  RPN.c  fila.c  main.c
aula19-09/libprg/: lista_linear.C  lista_linear.c  menu.c
aula19-09/libprg/src/include/libprg/: libprg.h
aula21-11/: CMakeLists.txt  main  main.c  main_arrumado.c
calculadora RPN/: CMakeLists.txt
calculadora RPN/include/: RPN.c
calculadora RPN/include/libprg2/: libprg2.c  libprg2.h
libprg2/: CMakeLists.txt  fila.c  libprg2.h  lista_encadeada.c  lista_encadeada_no.c  lista_linear.C  listaencadeada.h  tabelahash.h  teste_listaencadeada_no.c  teste_pilha.c
tarefa 1/: tarefa.c
tarefa 2/: tarefa 2  tarefa 2.c
tarefa 3/: tarefa 3.c
tarefa-4 algoritmos quicksort/: tarefa 4.c
verifica login/: CMakeLists.txt  login_projeto.c
verifica login/libprg2/: CMakeLists.txt  listaencadeada.c  listaencadeada.h  teste_listalinear.c
